[workspace]
members = [
    "rust/geodatafusion-flatgeobuf",
    "rust/geodatafusion-geojson",
    "rust/geodatafusion-geoparquet",
    "rust/geodatafusion",
]
exclude = ["python"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafusion-contrib/geodatafusion"
rust-version = "1.85"
categories = ["science::geo"]

[workspace.dependencies]
approx = "0.5.1"
arrow-arith = "57.1"
arrow-array = "57.1"
arrow-schema = "57.1"
async-trait = "0.1"
datafusion = { version = "50.2", default-features = false }
datafusion-datasource = { version = "50.2", default-features = false }
datafusion-datasource-parquet = "50.2"
flatgeobuf = { version = "5.0", default-features = false }
futures = "0.3"
geo = "0.31.0"
geo-traits = "0.3.0"
geoarrow-array = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
geoarrow-flatgeobuf = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
geoarrow-expr-geo = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
geoarrow-geojson = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
geodatafusion = { path = "rust/geodatafusion", version = "0.1.1" }
geohash = "0.13.1"
geojson = "0.24"
geoparquet = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "f1deee4549760c7cd8476511525115c185515272" }
http-range-client = { version = "0.9", default-features = false }
object_store = "0.12.4"
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.9", default-features = false }
wkb = "0.9"
wkt = "0.14"
